--- a/src/styles.css
+++ b/src/styles.css
@@ -14,11 +14,23 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color:  #516FA4;;
+  background-color: #FFF5ED;
 }
 .logo{
-  color: aliceblue;
-}
+  color:  rgb(147, 141, 141);  
+    font-family: "Pacifico", cursive;
+    font-size: 30px;
+    font-weight: 600;
+    font-style: normal;
+  
+    
+    
+  }
+  
+  
+
+
+
 .logo img {
   width: 100px;
 }
@@ -26,6 +38,9 @@ header {
 nav {
   
   display: none; 
+}
+.nav-toggle {
+  display: none;
 }
 
 .nav-toggle-label {
@@ -45,10 +60,13 @@ nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  
 }
 
 nav ul li {
   margin-bottom: 10px;
+  
+  
 }
 
 nav ul li:last-child {
@@ -57,7 +75,7 @@ nav ul li:last-child {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: rgb(128, 123, 123);
 }
 
 .nav-toggle:checked + nav {
@@ -74,7 +92,7 @@ nav a {
   border-radius: 30px;
   padding: 15px;
   width: 400px;
-  background-color: crimson;  
+  background-color:#adb2fb; /*#caffef; #afeff9; #ffdada;*/  
   border: none;
   
 }
@@ -97,7 +115,7 @@ nav a {
 
 .user-options a {
   text-decoration: none;
-  color: hsl(210, 100%, 100%);
+  color: rgb(90, 86, 86);
   margin-right: 10px;
 }
 
@@ -132,7 +150,7 @@ nav a {
 .text-center {
   font-size: 35px;
   
-  color: rgb(6, 6, 6);
+  color: rgb(90, 86, 86);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -146,7 +164,7 @@ nav a {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
     grid-gap: 20px;
-    background-color: #516FA4;
+    background-color:#caffef;
 }
 
 .producto {
@@ -160,7 +178,7 @@ nav a {
   border-radius: 20px; 
 }
 .producto button {
-  background-color:crimson; 
+  background-color:#adb2fb; 
   color: white; 
   border: none; 
   padding: 10px 20px; 
@@ -171,9 +189,24 @@ nav a {
 
 
 .producto button:hover {
-  background-color: darkblue; 
+  background-color: #ffff66; 
 }
-
+footer {
+  display: flex;
+  justify-content: space-around;
+  background-color: #adb2fb;
+}
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  color:  rgb(88, 86, 86);  
+    font-family: "Pacifico", cursive;
+    font-size: 20px;
+}
+.social-media {
+display: flex;
+flex-direction: column;
+}
 
 
 
